conformance/tests/httproute-308-redirect-scheme.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: 308-redirect-scheme
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /scheme-and-temporary
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: "https"
        statusCode: 308
